rendering templates for the app

--- a/gradmatch/gradmatchapp/templates/gradmatchapp/index.html
+++ b/gradmatch/gradmatchapp/templates/gradmatchapp/index.html
@@ -2,7 +2,7 @@
 <ul>
     {% for deadline in deadline_list %}
     <li>
-        <a href="#">{{deadline.name}}</a>
+        <a href="/gradmatchapp/{{deadline.id}}">{{deadline.name}}</a>
     </li>
     {% endfor %}
 </ul>
