--- a/gradmatch/gradmatchapp/templates/gradmatchapp/index.html
+++ b/gradmatch/gradmatchapp/templates/gradmatchapp/index.html
@@ -1,22 +1,23 @@
-{% load staticfiles %}
+{% extends 'gradmatchapp/base.html' %}
 
 <!DOCTYPE html>
 <html>
 	<head>
 		<title></title>
-
-		<link rel="stylesheet" type="text/css" href="{% static 'gradmatchapp/style.css' %}">
 	</head>
 	<body>
-		{% if deadline_list %}
-			<ul>
-			    {% for deadline in deadline_list %}
-				    <li>
-				        <a href="{% url 'gradmatchapp:detail' deadline.id %}">{{deadline.name}}</a>
-				    </li>
-			    {% endfor %}
-			</ul>
-		{% else %}
-		{% endif %}
+		{% block body %}
+
+			{% if deadline_list %}
+				<ul>
+				    {% for deadline in deadline_list %}
+					    <li>
+					        <a href="{% url 'gradmatchapp:detail' deadline.id %}">{{deadline.name}}</a>
+					    </li>
+				    {% endfor %}
+				</ul>
+			{% else %}
+			{% endif %}
+		{% endblock %}
 	</body>
 </html>
