add table and nav design

--- a/gradmatch/gradmatchapp/static/gradmatchapp/style.css
+++ b/gradmatch/gradmatchapp/static/gradmatchapp/style.css
@@ -2,3 +2,9 @@ body {
 	background: white url("background.jpg") no-repeat center center fixed; 
 	background-size:cover;  
 }
+
+.table {
+    border-radius: 10px;
+    margin: 100px auto;
+    float: none;
+}
