--- a/gradmatch/gradmatchapp/templates/gradmatchapp/index.html
+++ b/gradmatch/gradmatchapp/templates/gradmatchapp/index.html
@@ -7,17 +7,30 @@
 	</head>
 	<body>
 		{% block body %}
-
-			{% if deadline_list %}
-				<ul>
-				    {% for deadline in deadline_list %}
-					    <li>
-					        <a href="{% url 'gradmatchapp:detail' deadline.id %}">{{deadline.name}}</a>
-					    </li>
-				    {% endfor %}
-				</ul>
-			{% else %}
-			{% endif %}
+			<div class="container-fluid">
+				<table style="width: 50%" class="table table-dark table-hover text-centered">
+				<thead>
+					<tr>
+						<th scope="col">#</th>
+						<th scope="col">Name</th>
+						<th scope="col">Priority</th>
+						<th scope="col">Action</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% if deadline_list %}
+						{% for deadline in deadline_list %}
+							<tr class="active">
+								<td><a href="{% url 'gradmatchapp:detail' deadline.id %}">{{deadline.id}}</a></td>
+								<td><b>{{deadline.name}}</b></td>
+								<td><b>{{deadline.priority}}</b></td>
+								<td><button type="submit" class="btn btn-success">Done</button></td>
+							</tr>
+						{% endfor %}
+					{% endif %}
+				</tbody>
+			</table>
+			</div>
 		{% endblock %}
 	</body>
 </html>
