--- a/gradmatch/gradmatchapp/templates/gradmatchapp/schoolview.html
+++ b/gradmatch/gradmatchapp/templates/gradmatchapp/schoolview.html
@@ -1,16 +1,17 @@
-<!-- {% extends 'gradmatchapp/base.html' %} -->
+{% extends 'gradmatchapp/base.html' %}
 
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
-</head>
-<body>
-	{% block body %}
-	<p>testing this garbage</p>
-	{% for location in object_list %}
-		<a href="#">{{location.location_name}}</a>
-	{% endfor %}
-	{% endblock %}
-</body>
+	<head>
+		<title></title>
+	</head>
+	<body>
+		{% block body %}
+			<div class="container-fluid">
+				{% for location in object_list %}
+					<a href="#">{{location.location_name}}</a></br>
+				{% endfor %}
+			</div>
+		{% endblock %}
+	</body>
 </html>
