reorganize, add locations views

--- a/gradmatch/gradmatchapp/templates/gradmatchapp/base.html
+++ b/gradmatch/gradmatchapp/templates/gradmatchapp/base.html
@@ -1,5 +1,6 @@
 {% load staticfiles %}
 
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -14,11 +15,11 @@
 		<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
 			<div class="container-fluid">
 				<div class="navbar-header">
-					<a class="navbar-brand" href="#">GradMatchApp</a>
+					<a class="navbar-brand" href="./">GradMatchApp</a>
 				</div>
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link" href="#">Link 1</a>
+						<a class="nav-link" href="./locations">Locations</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Link 2</a>
