--- a/gradmatch/gradmatchapp/templates/gradmatchapp/base.html
+++ b/gradmatch/gradmatchapp/templates/gradmatchapp/base.html
@@ -15,7 +15,7 @@
 		<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
 			<div class="container-fluid">
 				<div class="navbar-header">
-					<a class="navbar-brand" href="./">GradMatchApp</a>
+					<a class="navbar-brand" href="/gradmatchapp">GradMatchApp</a>
 				</div>
 				<ul class="navbar-nav">
 					<li class="nav-item">
