--- a/gradmatch/gradmatchapp/templates/gradmatchapp/schoolview.html
+++ b/gradmatch/gradmatchapp/templates/gradmatchapp/schoolview.html
@@ -2,16 +2,50 @@
 
 
 <!DOCTYPE html>
+{% block body %}
 <html>
 	<head>
 		<title></title>
 	</head>
 	<body>
-		{% block body %}
-			<div class="container-fluid">
-				<h1>{{ school.school_name }}</h1>
-				<h1>{{ school.area }}</h1>
+		<div class="row" background-color="white">
+			<div class="col-md-1"></div>
+
+			<div class="col-md-3">
+				<div class="thumbnail">
+					<img src="{{ school.image_url }}" height="420" width="500">
+					<div class="caption">
+						<p>{{ school.school_name }}</p>
+					</div>
+				</div>
 			</div>
-		{% endblock %}
+
+			<div class="col-md-8">
+				<div class="container">
+					<div class="panel-group panel-dark">
+						<div class="panel panel-primary">
+							<div class="panel-heading"><h1>School Details</h1></div>
+							
+							<div class="panel-body">
+								<div class="table table-dark">
+									<tbody>
+										<tr>
+											<td>
+												<label><b>Area Sq. Miles</b></label>
+											</td>
+											<td>
+												<h1>{{ school.area }}</h1>
+											</td>
+											<!-- TODO: Add other school attributes -->
+										</tr>
+									</tbody>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
+{% endblock %}
