--- a/gradmatch/gradmatchapp/templates/gradmatchapp/base.html
+++ b/gradmatch/gradmatchapp/templates/gradmatchapp/base.html
@@ -28,10 +28,19 @@
 						<a class="nav-link" href="#">Link 3</a>
 					</li>
 				</ul>
+	
 			</div>
 		</nav>
-
+		
 		{% block body %}
 		{% endblock %}
 	</body>
+	<div class="button">
+		<button type="submit">Submit</button>
+	</div>
+
+	<div class="searchBar">
+		<input type="text" placeholder="Search Schools..." name="search">
+	</div>	
+
 </html>
