Added stylish features to search submit button

--- a/gradmatch/gradmatchapp/templates/gradmatchapp/base.html
+++ b/gradmatch/gradmatchapp/templates/gradmatchapp/base.html
@@ -36,7 +36,7 @@
 		{% endblock %}
 	</body>
 	<div class="button">
-		<button type="submit">Submit</button>
+		<button type="submit" style="background-color:rgb(80, 167, 207)">Submit</button>
 	</div>
 
 	<div class="searchBar">
