--- a/gradmatch/gradmatchapp/static/gradmatchapp/style.css
+++ b/gradmatch/gradmatchapp/static/gradmatchapp/style.css
@@ -10,24 +10,24 @@ body {
 }
 
 .button {
-    border: 1px solid green;
+    border: 2.5px solid #6897bb;
     border-radius: 2px;
     position: relative;
     margin-top: -163px;
+    margin-right: 7px;
     float: right;
 }
 
 .button:hover {
-    background: green;
-    color: white;
+    color: yellow;
 }
 
 .searchBar {
-    border: 1px solid green;
+    border: 2.5px solid #6897bb;
     border-radius: 2px;
     position: relative;
     margin-top: -163px;
-    margin-right: 68px;
+    margin-right: 75px;
     float: right;
 }
 
