--- a/gradmatch/gradmatchapp/templates/gradmatchapp/base.html
+++ b/gradmatch/gradmatchapp/templates/gradmatchapp/base.html
@@ -31,7 +31,7 @@
 						<a class="nav-link" href="#">Sign Up</a>
 					</li>
 					<li>
-						<a class="nav-link" href="#">Login</a>
+						<a class="nav-link" href="./login">Login</a>
 					</li>
 				</ul>
 
