--- a/gradmatch/gradmatchapp/templates/gradmatchapp/base.html
+++ b/gradmatch/gradmatchapp/templates/gradmatchapp/base.html
@@ -28,7 +28,7 @@
 						<a class="nav-link" href="#">Link 3</a>
 					</li>
 					<li>
-						<a class="nav-link" href="#">Sign Up</a>
+						<a class="nav-link" href="./signup">Sign Up</a>
 					</li>
 					<li>
 						{% if user.is_authenticated %}
