changed the text appearance of location and location_views page. needs a little more work though on overall appearance. will continue that and update as I go

--- a/gradmatchapp/templates/gradmatchapp/locationview.html
+++ b/gradmatchapp/templates/gradmatchapp/locationview.html
@@ -9,9 +9,18 @@
 	<body>
 		{% block body %}
 			<div class="container-fluid">
-				{% for school in location.school_set.all %}
-					<a href="/gradmatchapp/locations/{{location.id}}/{{school.id}}">{{ school.school_name }}</a>
-				{% endfor %}
+				<h1>Schools</h1>
+				<div class="schools">
+					{% for school in location.school_set.all %}
+						<li class="a">
+							<span>
+								<a href="/gradmatchapp/locations/{{location.id}}/{{school.id}}">
+									{{ school.school_name }}
+								</a></br>
+							</span>
+						</li>
+					{% endfor %}
+				</div>
 			</div>
 		{% endblock %}
 	</body>
