--- a/gradmatchapp/static/gradmatchapp/style.css
+++ b/gradmatchapp/static/gradmatchapp/style.css
@@ -1,6 +1,6 @@
 body {
-	background: white url("background.jpg") no-repeat center center fixed; 
-	background-size: cover;
+    background: white url("background.jpg") no-repeat center center fixed;
+    background-size: cover; 
 }
 
 .table {
@@ -16,3 +16,39 @@ body {
     float: right;
 }
 
+.white-box{
+    background-color: white;
+    color: black;
+}
+
+h1{
+    padding: 15px;
+    font-weight: bold;
+    font-style: italic;
+    color: rgb(179, 216, 233);
+    font-family: "Comic Sans";
+    text-decoration: underline;
+    font-size: 30px;
+    text-shadow: -2px -2px black, 2px -2px black, -2px 2px black, 2px 2px black;
+}
+
+
+/* This controls the size of the bullet points in the list: locations.html */
+li.a{
+    font-size: 33px;
+    list-style: none;
+}
+
+li.a:before{
+    content: '\2022';
+    color: rgb(80, 167, 207);
+    padding: 10px;
+    text-shadow: -2px -2px black, 2px -2px black, -2px 2px black, 2px 2px black;
+}
+
+/* This controls the text in the bullet points: locations.html */
+li.a span{
+    font-size: 22px;
+    font-weight: bold;
+    color: rgb(207, 80, 143);
+    text-shadow: -2px -2px black, 2px -2px black, -2px 2px black, 2px 2px black;
