--- a/gradmatchapp/templates/gradmatchapp/locations.html
+++ b/gradmatchapp/templates/gradmatchapp/locations.html
@@ -1,6 +1,5 @@
 {% extends 'gradmatchapp/base.html' %}
 
-
 <!DOCTYPE html>
 <html>
 	<head>
@@ -9,9 +8,18 @@
 	<body>
 		{% block body %}
 			<div class="container-fluid">
-				{% for location in object_list %}
-					<a href="locations/{{location.id}}">{{location.location_name}}</a></br>
-				{% endfor %}
+				<h1>Locations</h1>
+				<div class="locations">
+					{% for location in object_list %}
+						<li class="a">
+							<span>
+								<a href="locations/{{location.id}}">
+									{{location.location_name}}
+								</a></br>
+							</span>
+						</li>
+						{% endfor %}
+				</div>
 			</div>
 		{% endblock %}
 	</body>
