--- a/gradmatchapp/static/gradmatchapp/style.css
+++ b/gradmatchapp/static/gradmatchapp/style.css
@@ -50,5 +50,22 @@ li.a:before{
 li.a span{
     font-size: 22px;
     font-weight: bold;
-    color: rgb(207, 80, 143);
     text-shadow: -2px -2px black, 2px -2px black, -2px 2px black, 2px 2px black;
+}
+
+.login_specs{
+    font-size: 20px;
+    font-weight: bold;
+    padding: 10px;
+    color: rgb(179, 216, 233);
+    text-shadow: -1px -1px black, 1px -1px black, -1px 1px black, 1px 1px black;
+}
+
+.signup_specs {
+    font-size: 20px;
+    font-weight: bold;
+    padding: 10px;
+    color: rgb(179, 216, 233);
+    text-shadow: -1px -1px black, 1px -1px black, -1px 1px black, 1px 1px black;
+}
+
