--- a/gradmatchapp/templates/gradmatchapp/base.html
+++ b/gradmatchapp/templates/gradmatchapp/base.html
@@ -22,13 +22,19 @@
 						<a class="nav-link" href="./locations">Locations</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Link 2</a>
+						{% if user.is_authenticated %}
+						<a class="nav-link" href="./profile">Profile</a>
+						{% else %}
+						{% endif %}
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Link 3</a>
 					</li>
 					<li>
+						{% if user.is_authenticated %}
+						{% else %}
 						<a class="nav-link" href="./signup">Sign Up</a>
+						{% endif %}
 					</li>
 					<li>
 						{% if user.is_authenticated %}
