Took out the excess Link3 from the toolbar, changed the titles of the locations, and location view pages to match the end product better.

--- a/gradmatchapp/templates/gradmatchapp/locationview.html
+++ b/gradmatchapp/templates/gradmatchapp/locationview.html
@@ -9,7 +9,7 @@
 	<body>
 		{% block body %}
 			<div class="container-fluid">
-				<h1>Schools</h1>
+				<h1>Locations</h1>
 				<div class="schools">
 					{% for school in location.school_set.all %}
 						<li class="a">
