--- a/gradmatchapp/templates/gradmatchapp/locations.html
+++ b/gradmatchapp/templates/gradmatchapp/locations.html
@@ -8,7 +8,7 @@
 	<body>
 		{% block body %}
 			<div class="container-fluid">
-				<h1>Locations</h1>
+				<h1>States</h1>
 				<div class="locations">
 					{% for location in object_list %}
 						<li class="a">
