--- a/gradmatchapp/static/gradmatchapp/style.css
+++ b/gradmatchapp/static/gradmatchapp/style.css
@@ -23,13 +23,8 @@ body {
 
 h1{
     padding: 15px;
-    font-weight: bold;
-    font-style: italic;
-    color: rgb(179, 216, 233);
-    font-family: "Comic Sans";
-    text-decoration: underline;
+    font-family: "Times New Roman";
     font-size: 30px;
-    text-shadow: -2px -2px black, 2px -2px black, -2px 2px black, 2px 2px black;
 }
 
 
@@ -55,10 +50,8 @@ li.a span{
 
 .login_specs{
     font-size: 20px;
-    font-weight: bold;
     padding: 10px;
-    color: rgb(179, 216, 233);
-    text-shadow: -1px -1px black, 1px -1px black, -1px 1px black, 1px 1px black;
+    margin: auto;
 }
 
 .signup_specs {
@@ -69,4 +62,38 @@ li.a span{
     text-shadow: -1px -1px black, 1px -1px black, -1px 1px black, 1px 1px black;
 }
 
+#login_page {
+    background: white;
+}
 
+#login_form {
+    width: 50%;
+    height: 50%;
+    margin: 50px auto;
+    padding: 20px;
+    border-style: solid;
+    border-width: thin;
+    text-align: center;
+    float: center;
+    display: block;
+}
+
+#login_button {
+    width: 90%;
+    background-color: DeepSkyBlue;
+    margin: 0px auto;
+    text-align: center;
+    display: block;
+}
+
+#submit {
+    background-color: DeepSkyBlue;
+}
+
+#id_username {
+    width: 90%;
+}
+
+#id_password {
+    width: 90%;
+}
