--- a/gradmatchapp/templates/gradmatchapp/locationview.html
+++ b/gradmatchapp/templates/gradmatchapp/locationview.html
@@ -8,6 +8,14 @@
 	</head>
 	<body>
 		{% block body %}
+			<!-- Reference: calazan.com/adding-basic-search-to-your-djang-site/-->
+			<div class="searchBar">
+				<form id = "searchform" action="{% url 'locations/{{location.id}}' %" method="get" accept-carset="utf-8">
+					<input class="searchfield" id="searchbox" name="q" type="text" placeholder="Search Schools..."></input>
+					<button type="submit" id="submit">Submit<i class="fa fa-search"></i>
+					</button>
+				</form>
+			</div>
 			<div class="container-fluid">
 				<h1>Locations</h1>
 				<div class="schools">
