--- a/gradmatchapp/templates/registration/login.html
+++ b/gradmatchapp/templates/registration/login.html
@@ -6,16 +6,16 @@
 	<head>
 		<title></title>
 	</head>
-	<body>
-		<div class="container-fluid">
-			<h1> Login </h1>
-			<div class="login_specs">
-				<form method = "post">
-					{% csrf_token %}
-					{{form.as_p}}
-				<button type = "submit" style="background-color:rgb(80, 167, 207)">Login</button>
-				</form>
-			</div>				
+	<body id="login_page">
+		<div class="container" id="login_form">
+						<div class="login_specs">
+							<h1> Sign in </h1>
+							<form method = "post">
+								{% csrf_token %}
+								{{ form.as_p }}
+							<button type = "submit" id="login_button">Sign in</button>
+							</form>
+						</div>	
 		</div>
 	</body>
 </html>
