--- a/gradmatchapp/templates/gradmatchapp/signup.html
+++ b/gradmatchapp/templates/gradmatchapp/signup.html
@@ -6,17 +6,31 @@
 	<head>
 		<title></title>
 	</head>
-	<body>
-		<div class="container-fluid">
-			<h1> Sign Up </h1>
-			<div class="signup_specs">
+	<body id="login_page">
+		<div class="container" id="login_form">
+				<h1> Sign Up </h1>
 				<form method = "post">
 					{% csrf_token %}
-					{{form.as_p}}
-					<button type = "submit" style="background-color:rgb(80, 167, 207)">Sign Up</button>
+					<form method="post">
+						<input type="hidden" name="csrfmiddlewaretoken" value="1nBad5qPHELa0IVQ9vYXEg4YEcrIIF1CqY57fBRQzA01yXH9z6xzL7gKGsGFeEYC">
+						<p>
+							<label for="id_username">Username:</label> 
+							<input type="text" name="username" maxlength="150" autocapitalize="none" autocomplete="username" autofocus="" required="" id="id_username">
+						</p>
+						<p>Your password must contain at least 8 characters.</p>
+						<p>
+							<label for="id_password">Password:</label>
+							<input type="password" name="password1" autocomplete="new-password" required="" id="id_password"> <span class="helptext">
+							</span>
+						</p>
+						<p>
+							<label for="id_password">Password confirmation:</label>
+							<input type="password" name="password2" autocomplete="new-password" required="" id="id_password">
+						</p>
+					<button id="login_button">Sign Up</button>
 				</form>
-			</div>
 		</div>
 	</body>
 </html>
 {% endblock %}
+
