--- a/gradmatchapp/templates/gradmatchapp/signup.html
+++ b/gradmatchapp/templates/gradmatchapp/signup.html
@@ -14,19 +14,16 @@
 					<form method="post">
 						<input type="hidden" name="csrfmiddlewaretoken" value="1nBad5qPHELa0IVQ9vYXEg4YEcrIIF1CqY57fBRQzA01yXH9z6xzL7gKGsGFeEYC">
 						<p>
-							<label for="id_username">Username:</label> 
-							<input type="text" name="username" maxlength="150" autocapitalize="none" autocomplete="username" autofocus="" required="" id="id_username">
+							<input type="text" placeholder="Username" name="username" maxlength="150" autocapitalize="none" autocomplete="username" autofocus="" required="" id="id_username">
 						</p>
-						<p>Your password must contain at least 8 characters.</p>
 						<p>
-							<label for="id_password">Password:</label>
-							<input type="password" name="password1" autocomplete="new-password" required="" id="id_password"> <span class="helptext">
+							<input type="password" placeholder="Enter Password" name="password1" autocomplete="new-password" required="" id="id_password"> <span class="helptext">
 							</span>
 						</p>
 						<p>
-							<label for="id_password">Password confirmation:</label>
-							<input type="password" name="password2" autocomplete="new-password" required="" id="id_password">
+							<input type="password" placeholder="Confirm Password" name="password2" autocomplete="new-password" required="" id="id_password">
 						</p>
+						<p>Your password must contain at least 8 characters.</p>
 					<button id="login_button">Sign Up</button>
 				</form>
 		</div>
