--- a/gradmatchapp/templates/gradmatchapp/base.html
+++ b/gradmatchapp/templates/gradmatchapp/base.html
@@ -19,25 +19,25 @@
 				</div>
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link" href="./locations">Locations</a>
+						<a class="nav-link" href="/locations">Locations</a>
 					</li>
 					<li class="nav-item">
 						{% if user.is_authenticated %}
-						<a class="nav-link" href="./profile">Profile</a>
+						<a class="nav-link" href="/profile">Profile</a>
 						{% else %}
 						{% endif %}
 					</li>
 					<li>
 						{% if user.is_authenticated %}
 						{% else %}
-						<a class="nav-link" href="./signup">Sign Up</a>
+						<a class="nav-link" href="/signup">Sign Up</a>
 						{% endif %}
 					</li>
 					<li>
 						{% if user.is_authenticated %}
-						<a class="nav-link" href="./logout">Logout</a>
+						<a class="nav-link" href="/logout">Logout</a>
 						{% else %}
-						<a class="nav-link" href="./login">Login</a>
+						<a class="nav-link" href="/login">Login</a>
 						{% endif %}
 					</li>
 				</ul>
