--- a/gradmatchapp/templates/gradmatchapp/index.html
+++ b/gradmatchapp/templates/gradmatchapp/index.html
@@ -8,30 +8,33 @@
 	</head>
 	<body>
 		{% block body %}
-			<div class="container-fluid">
-				<table style="width: 50%" class="table table-dark table-hover text-centered">
-				<thead>
-					<tr>
-						<th scope="col">#</th>
-						<th scope="col">Name</th>
-						<th scope="col">Priority</th>
-						<th scope="col">Action</th>
-					</tr>
-				</thead>
-				<tbody>
-					{% if deadline_list %}
-						{% for deadline in object_list %}
-							<tr class="active">
-								<td><a href="{% url 'gradmatchapp:detail' deadline.id %}">{{deadline.id}}</a></td>
-								<td><b>{{deadline.name}}</b></td>
-								<td><b>{{deadline.priority}}</b></td>
-								<td><button type="submit" class="btn btn-success">Done</button></td>
+		<div class="row">
+				<div class="col-4 profile">Testing Div</div>
+				<div class="col-6">
+					<table style="width: 100%" class="table table-dark table-hover text-centered">
+						<thead>
+							<tr>
+								<th scope="col">#</th>
+								<th scope="col">Name</th>
+								<th scope="col">Priority</th>
+								<th scope="col">Action</th>
 							</tr>
-						{% endfor %}
-					{% endif %}
-				</tbody>
-			</table>
-			</div>
+						</thead>
+						<tbody>
+							{% if deadline_list %}
+								{% for deadline in object_list %}
+									<tr class="active">
+										<td><a href="{% url 'gradmatchapp:detail' deadline.id %}">{{deadline.id}}</a></td>
+										<td><b>{{deadline.name}}</b></td>
+										<td><b>{{deadline.priority}}</b></td>
+										<td><button type="submit" class="btn btn-success">Done</button></td>
+									</tr>
+								{% endfor %}
+							{% endif %}
+						</tbody>
+					</table>
+				</div>
+		</div>
 		{% endblock %}
 	</body>
 </html>
