--- a/gradmatchapp/templates/gradmatchapp/base.html
+++ b/gradmatchapp/templates/gradmatchapp/base.html
@@ -19,7 +19,7 @@
 				</div>
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link" href="/locations">Locations</a>
+						<a class="nav-link" href="/locations">Find Schools</a>
 					</li>
 					<li class="nav-item">
 						{% if user.is_authenticated %}
