--- a/gradmatchapp/templates/gradmatchapp/index.html
+++ b/gradmatchapp/templates/gradmatchapp/index.html
@@ -9,7 +9,9 @@
 	<body>
 		{% block body %}
 		<div class="row">
-				<div class="col-4 profile">Testing Div</div>
+				<div class="col-4 profile">
+					<h1>Profile</h1>
+				</div>
 				<div class="col-6">
 					<table style="width: 100%" class="table table-dark table-hover text-centered">
 						<thead>
