--- a/gradmatchapp/templates/gradmatchapp/signup.html
+++ b/gradmatchapp/templates/gradmatchapp/signup.html
@@ -6,15 +6,15 @@
 	<head>
 		<title></title>
 	</head>
-	<body id="login_page">
-		<div class="container" id="login_form">
-			<div class="col-sm-6">
+	<body>
+		<div class="container" id="signup_page" style="background: white !important">
+			<div class="col">
 				<div class="panel panel-default">
 					<div class="panel-heading">Sign up</div>
 					<div class="panel-body">
 						<form method="post">
 							{% csrf_token %}
-							{{ form.as_p }}
+							{{ form.as_table }}
 							<button type="submit">Sign up</button>
 						</form>
 					</div>
