Made tables prettier and highlighting even columns fixed

--- a/gradmatchapp/static/gradmatchapp/style.css
+++ b/gradmatchapp/static/gradmatchapp/style.css
@@ -38,12 +38,12 @@ table {
 }
 
 td, th {
-    border: 1px solid #dddddd;
+    border: 1px solid white;
     text-align: left;
     padding: 8px;
 }
 
-tr:nth-child(even){
+#schools:nth-child(even){
     background-color: #dddddd;
 }
 
