--- a/gradmatchapp/templates/gradmatchapp/locations.html
+++ b/gradmatchapp/templates/gradmatchapp/locations.html
@@ -9,10 +9,18 @@
 		{% block body %}
 			<div class="container" id="locations">
 				<h1>Pick your State</h1>
+				<!-- Reference: calazan.com/adding-basic-search-to-your-djang-site/-->
+				<div class="searchBar">
+					<form id = "searchform" action="{% url 'locations/{{location.id}}' %" method="get" accept-carset="utf-8">
+						<input class="searchfield" id="searchbox" name="q" type="text" placeholder="Search Schools..."></input>
+						<button type="submit" id="submit">Submit<i class="fa fa-search"></i>
+						</button>
+					</form>
+				</div>
 				<table>
 					<tr><th>States</th></tr>
 					{% for location in object_list %}
-					<tr>
+					<tr id="schools">
 						<td>
 							<a href="locations/{{location.id}}">
 								{{location.location_name}}
