add print for school id

--- a/gradmatchapp/templates/gradmatchapp/locationview.html
+++ b/gradmatchapp/templates/gradmatchapp/locationview.html
@@ -15,7 +15,8 @@
 						<tr id="schools">
 							<td>
 								<a href="/gradmatchapp/locations/{{location.id}}/{{school.id}}">
-									{{ school.school_name }}
+									{{ school.school_name }}</br>
+									{{ school.id }}
 								</a></br>
 							</td>
 						</tr>
