print id for heroku debug

--- a/gradmatchapp/templates/gradmatchapp/locations.html
+++ b/gradmatchapp/templates/gradmatchapp/locations.html
@@ -23,7 +23,8 @@
 					<tr id="schools">
 						<td>
 							<a href="locations/{{location.id}}">
-								{{location.location_name}}
+								{{ location.location_name }}</br>
+								{{ location.id }}
 							</a></br>
 						</td>
 					</tr>
