--- a/gradmatchapp/templates/gradmatchapp/locationview.html
+++ b/gradmatchapp/templates/gradmatchapp/locationview.html
@@ -14,7 +14,7 @@
 					{% for school in location.school_set.all %}
 						<tr id="schools">
 							<td>
-								<a href="/gradmatchapp/locations/{{location.id}}/{{school.id}}">
+								<a href="/gradmatchapp/locations/{{school.id}}/{{location.id}}">
 									{{ school.school_name }}</br>
 									{{ school.id }}
 								</a></br>
