--- a/gradmatchapp/static/gradmatchapp/style.css
+++ b/gradmatchapp/static/gradmatchapp/style.css
@@ -104,3 +104,33 @@ td, th {
     margin: 20px auto;
     width: 100%;
 }
+
+.form-popup{
+    display: none;
+    position: fixed;
+    bottom: 0;
+    right: 15px;
+    border: 3px solid black;
+    z-index: 9;
+}
+
+.form-container{
+    max-width: 900px;
+    padding: 10px;
+    background-color: white;
+    border-style: solid;
+    border-width: thin;
+}
+
+.form-container input[type=text], .form-container input[type=Name]{
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    border: none;
+    background: white;
+}
+
+.form-container input[type=text]:focus, .form-container input[type=password]:focus {
+    background-color: #ddd;
+    outline: none;
+}
