--- a/gradmatchapp/templates/gradmatchapp/base.html
+++ b/gradmatchapp/templates/gradmatchapp/base.html
@@ -23,7 +23,7 @@
 					</li>
 					<li class="nav-item">
 						{% if user.is_authenticated %}
-						<a class="nav-link" href="/profile">Profile</a>
+						<a class="nav-link" href="/profile">My Schools</a>
 						{% else %}
 						{% endif %}
 					</li>
