--- a/gradmatchapp/templates/gradmatchapp/profile.html
+++ b/gradmatchapp/templates/gradmatchapp/profile.html
@@ -6,7 +6,7 @@
 	<body> 
 	{% block body %}
 		<div class="container" id="locations">
-		<h1>User Profile</h1>
+		<h1>My Schools</h1>
 			<table>	
 				<tr><th>School List</th></tr>
 				{% for object in user_list %}
