--- a/gradmatchapp/templates/gradmatchapp/index.html
+++ b/gradmatchapp/templates/gradmatchapp/index.html
@@ -10,7 +10,7 @@
 		{% block body %}
 		<div class="row">
 			{% if user.is_authenticated %}
-				<div class="col-4 profile">
+				<div class="col-4">
 					<h1>Profile</h1>
 				</div>
 				<div class="col-6">
