--- a/gradmatchapp/templates/gradmatchapp/index.html
+++ b/gradmatchapp/templates/gradmatchapp/index.html
@@ -64,7 +64,7 @@
 									<button type="submit" class="btn">Add Deadline</button>
 								</div>
 								<div class="controls">
-									<button type="button" class="btn cancel" onclick="closeForm()">Cancel</button>
+									<button type="button" class="btn cancel" action="/">Cancel</button>
 								</div>
 							</div>
 						</form>
